crates/weft-snapshots/tests/snapshots/solid-jsx/corpus-orders.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-orders as solid-jsx
---
import { Show } from "solid-js";

function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

function _squash(v) {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _press(e, fire) {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

function _ix(list) {
  return list.map((v, i) => [v, () => i]);
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="orders" aria-label="Orders">
      <h2 data-weft-id="title">Orders</h2>
      {(() => {
        const _cols = [
          (
            <th data-weft-id="col-id" scope="col" aria-sort="descending" tabindex={0} onClick={() => _act(props.actions, { id: "col-id", action: "orders.sortById" })} onKeyDown={(_e) => _press(_e, () => _act(props.actions, { id: "col-id", action: "orders.sortById" }))}>Order</th>
          ),
          (
            <th data-weft-id="col-total" scope="col" aria-sort="none">
              {!(_text(props.data?.labels?.total).trim() === "") ? _squash(_text(props.data?.labels?.total)) : ""}
            </th>
          ),
          ..._ix(_list(props.data?.orders)).flatMap(([order, _i0]) => []),
        ];
        const _rows = [
          ..._ix(_list(props.data?.orders)).flatMap(([order, _i0]) => [
            (
              <tr data-weft-id={"order[" + _i0() + "]"} aria-selected={String(_on(order?.selected))} tabindex={0} onClick={() => _act(props.actions, { id: "order[" + _i0() + "]", action: "orders.open", item: "$.orders." + _i0() })} onKeyDown={(_e) => _press(_e, () => _act(props.actions, { id: "order[" + _i0() + "]", action: "orders.open", item: "$.orders." + _i0() }))}>
                <td data-weft-id={"order-id[" + _i0() + "]"}>
                  <Show when={!(_text(order?.id).trim() === "")}>
                    {_text(order?.id)}
                  </Show>
                </td>
                <td data-weft-id={"order-total[" + _i0() + "]"}>
                  <div data-weft-id={"order-amount[" + _i0() + "]"}>
                    {!(_text(order?.total).trim() === "") ? _squash(_text(order?.total)) : ""}
                  </div>
                </td>
              </tr>
            ),
          ]),
        ];
        return (
          <table data-weft-id="open-orders" data-state="ready" aria-label="Open orders">
            <Show when={_cols.length > 0}>
              <thead>
                <tr>
                  {_cols}
                </tr>
              </thead>
            </Show>
            <Show when={!(_list(props.data?.orders).length > 0)} fallback={(
              <Show when={_rows.length > 0}>
                <tbody>
                  {_rows}
                </tbody>
              </Show>
            )}>
              <tbody>
                <tr data-weft-slot="empty">
                  <td colspan={Math.max(1, _cols.length)}>
                    <div data-weft-id="no-orders">No open orders.</div>
                  </td>
                </tr>
              </tbody>
            </Show>
          </table>
        );
      })()}
      {(() => {
        const _cols = [
          (
            <th data-weft-id="col-archived" scope="col">Order</th>
          ),
        ];
        const _rows = [];
        return (
          <table data-weft-id="archived" data-state="empty" aria-label="Archived orders">
            <Show when={_cols.length > 0}>
              <thead>
                <tr>
                  {_cols}
                </tr>
              </thead>
            </Show>
            <tbody>
              <tr data-weft-slot="empty">
                <td colspan={Math.max(1, _cols.length)}>
                  <div data-weft-id="archived-empty">Nothing archived yet.</div>
                </td>
              </tr>
            </tbody>
          </table>
        );
      })()}
      {(() => {
        const _cols = [
          (
            <th data-weft-id="col-pending" scope="col">Order</th>
          ),
        ];
        const _rows = [
          (
            <tr data-weft-id="pending-row" aria-selected="true">
              <td data-weft-id="pending-cell">{"Fetching…"}</td>
            </tr>
          ),
        ];
        return (
          <table data-weft-id="pending" data-state="loading" aria-busy="true" aria-label="Pending orders">
            <Show when={_cols.length > 0}>
              <thead>
                <tr>
                  {_cols}
                </tr>
              </thead>
            </Show>
            <Show when={_rows.length > 0}>
              <tbody>
                {_rows}
              </tbody>
            </Show>
          </table>
        );
      })()}
    </main>
  );
}
